--- a/public/assets/css/messages.css
+++ b/public/assets/css/messages.css
@@ -1,26 +1,40 @@
 body {
     background-color: black;
-    color: #ca593d;
 }
 
 h1 {
-    margin-left: 20px;
+    font-family: Arial, sans-serif;
+    font-size: clamp(2rem, 2vw, 4rem);
+    font-weight: bold;
+    color: #cf8c34;
     margin-bottom: 10px;
     margin-top: 20px;
-    font-size: 45px;
 }
 
 .form-inline {
-    padding: 5px;
-    font-size: 14px;
+    padding: 10px;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-control {
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
 #salvarMensagem {
-    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
+    color: whitesmoke;
     border: #db5938 2px solid;
     border-radius: 5px;
     padding: 3px;
-    width: 100px;
+    margin-left: 5px;
+    width: 70px;
     background-color: #db5938;
 }
 
@@ -52,18 +66,8 @@ h1 {
     border-radius: 5px;
     background-color: whitesmoke;
     border: #ca593d 2px solid;
-    color: black;
-}
-
-#btnSave {
-    font-size: 18px;
-    margin-right: 5px;
-    width: 90px;
-    height: 38px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    background-color: whitesmoke;
-    border: #ca593d 2px solid;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
     color: black;
 }
 
@@ -73,18 +77,30 @@ h1 {
     border-radius: 5px;
     background-color: whitesmoke;
     border: #ca593d 2px solid;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
     color: black;
 }
 
-#btnCancel {
-    font-size: 18px;
-    margin-left: 5px;
-    width: 90px;
-    height: 38px;
+#btnSave {
+    width: 80px;
     margin-bottom: 10px;
     border-radius: 5px;
     background-color: whitesmoke;
     border: #ca593d 2px solid;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.5rem, 2vw, 1rem);
+    color: black;
+}
+
+#btnCancel {
+    width: 80px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    border: #ca593d 2px solid;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.5rem, 2vw, 1rem);
     color: black;
 }
 
@@ -93,23 +109,18 @@ h1 {
     text-align: center;
 }
 
-table>tbody>tr>td>#action {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
 #logout {
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.8rem, 2vw, 1rem);
+    color: whitesmoke;
+    border: #db5938 2px solid;
     position: fixed;
     top: 1.8rem;
-    right: 24.8rem;
-    font-size: 16px;
+    right: 2.48rem;
     width: 70px;
     padding: 3px;
     border-radius: 5px;
     background-color: #db5938;
-    color: whitesmoke;
     opacity: 85%;
 }
 
@@ -121,6 +132,7 @@ table>tbody>tr>td>#action {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.7) !important;
+    border-radius: 5px;
     z-index: 99999;
 }
 
@@ -129,7 +141,23 @@ table>tbody>tr>td>#action {
     top: 50%;
     left: 50%;
     background-color: #fff;
+    border-radius: 5px;
     width: 50%;
-    /* height: 42%; */
     transform: translateY(-50%) translateX(-50%);
 }
+
+#modalEdit>h1 {
+    padding: 15px;
+
+}
+
+
+/* @media screen and (min-width:534px) and (max-width:960px) {}
+
+@media screen and (min-width:961px) and (max-width:1366px) {}
+
+@media screen and (min-width:1367px) {
+    #logout {
+        right: 24.8rem;
+    }
+} */
