--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,55 +1,100 @@
-#img {
+body {
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    z-index: 0;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+#img-tiger {
+    width: 100%;
+    z-index: -1;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    opacity: 0.9;
 }
 
 #bemVindo {
-    position: absolute;
+    display: flex;
     top: 38%;
     left: 21.5%;
-    width: 300px;
-    z-index: 1;
+    width: 275px;
+}
+
+#container {
+    width: 20rem;
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #form {
-    position: fixed;
-    left: 20%;
-    top: 48%;
-    background-color: rgb(216, 153, 72);
+    width: 100%;
+    background-color: rgb(216, 153, 72, 0.7);
     border-radius: 5px;
-    display: grid;
-    padding: 25px;
-    text-align: center;
+    padding: 5%;
     box-shadow: 16px 16px 10px black, -0.4em 0.7em 20em rgba(241, 225, 132, 0.781);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: backInDown 1s linear;
+}
+
+@keyframes backInDown {
+    0% {
+        -webkit-transform: translateY(-1200px) scale(0.7);
+        transform: translateY(-1200px) scale(0.7);
+        opacity: 0.7;
+    }
+
+    80% {
+        -webkit-transform: translateY(0px) scale(0.7);
+        transform: translateY(0px) scale(0.7);
+        opacity: 0.7;
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 form>h1 {
-    font-size: 25px;
-    padding-bottom: 20px;
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: clamp(1rem, 2vw, 1.3rem);
+    padding-bottom: 10px;
     color: black;
     filter: drop-shadow(3px 3px 10px whitesmoke);
 }
 
 .input-login {
-    font-size: 16px;
-    margin-bottom: 5px;
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.7rem, 2vw, 1rem);
+    margin-bottom: 8px;
     border-radius: 5px;
     border: 1px black solid;
     padding: 5px;
-    width: 300px;
-
+    width: 100%;
 }
 
 .btn-login {
-    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.7rem, 2vw, 0.9rem);
     border-radius: 5px;
     border: 1px black solid;
-    padding: 3px;
+    padding: 8px;
     margin-top: 5px;
     width: 100px;
-    margin-left: 33%;
     background-color: #cf8c34;
 }
 
@@ -62,13 +107,13 @@ form>h1 {
 }
 
 .btn-login2 {
-    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.7rem, 2vw, 0.9rem);
     border-radius: 5px;
     border: 1px black solid;
-    padding: 3px;
+    padding: 8px;
     margin-top: 5px;
     width: 150px;
-    margin-left: 25%;
     background-color: #cf8c34;
 }
 
@@ -81,12 +126,50 @@ form>h1 {
 }
 
 form>a {
-    font-size: 14px;
-    padding: 3px;
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: clamp(0.6rem, 2vw, 0.8rem);
+    padding-top: 8px;
     color: black;
 }
 
 form>a:hover {
     color: white;
     text-decoration: none;
+}
+
+@media screen and (min-width:534px) and (max-width:960px) {
+    body {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    #container {
+        margin-left: 70px;
+    }
+
+}
+
+@media screen and (min-width:961px) and (max-width:1366px) {
+    body {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    #container {
+        margin-left: 70px;
+        width: 30rem;
+    }
+}
+
+@media screen and (min-width:1367px) {
+    body {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    #container {
+        margin-left: 100px;
+        width: 40rem;
+    }
 }
